fixed alignment on home page

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -21,10 +21,13 @@ body {
 }
 
 .storyBody > p {
-  padding: 10px;
+  padding: 12px;
   direction: ltr;
   text-align: left;
-  font-size: 22px;
+  font-size: 18px;
+  font-family: "C64 PRO";
+  color: lime;
+  text-shadow: 0 0 1px lime, 0 0 12px lime;
   margin-top: -4px;
   white-space: nowrap;
   overflow: hidden;
@@ -33,7 +36,7 @@ body {
 
 #storyBody{
   display: -webkit-box;
-  -webkit-line-clamp: 3;
+  -webkit-line-clamp: 5;
   -webkit-box-orient: vertical;
   align-items: center;
   margin-left: 20%;
@@ -45,8 +48,8 @@ body {
 
 hr {
   border-color:  lime;
-  box-shadow: 0px 0px 10px 1px lime;
-  width: 100%;
+  box-shadow: 0px 0px 6px 1px lime;
+  width: 60%;
 }
 
 .storyInfo {
@@ -56,6 +59,7 @@ hr {
   margin-left: 20%;
   margin-right: 20%;
   height: auto;
+  margin-top: -60px;
 }
 
 .storyContainer {
@@ -76,7 +80,7 @@ hr {
 .title {
   margin-bottom: -35px;
   font-size: 24px;
-  letter-spacing: 3px;
+  letter-spacing: 4px;
   color: #fff;
   text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
   text-shadow: 0 0 1px rgb(119, 255, 85), 0 0 6px rgb(72, 228, 92);
@@ -84,11 +88,11 @@ hr {
 
 .subTitle {
   font-size: 18px;
+  letter-spacing: 3px;
   margin-top: -5px;
-  color: gainsboro;
-  text-shadow:
-  0 0 1px #fff,
-  0 0 5px #fff;
+  color: white;
+  text-shadow:0 0 1px #fff, 0 0 3px #fff,  0 0 14px #fff;
+
 }
 
 .mainTitle{
@@ -134,32 +138,39 @@ hr {
   text-shadow:0 0 1px #fff, 0 0 5px #fff,  0 0 8px #fff;
 }
 
+
+/* contains date and name, and topics containers */
+.topic {
+  display: flex;
+  flex-direction: row;
+  margin-top: -20px;
+  justify-content: space-between;
+  margin-left: 20%;
+  margin-right: 20%;
+}
+
+/* contains date and name under story preview */
 .nameContainer{
   display: flex;
-  justify-content: column;
   gap: 5px;
-  margin-top: -40px;
-  bottom: 0;
-}
-
-.topic {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-}
-
-.topics {
-
+  margin-top: 2px;
+  color: lime;
+  text-shadow: 0 0 1px rgb(119, 255, 85), 0 0 6px rgb(72, 228, 92);
+  letter-spacing: 2px;
 }
 
 .topicName {
   color: rgb(255, 255, 255);
-  font-size: 20px;
+  text-shadow:0 0 1px #fff, 0 0 3px #fff,  0 0 14px #fff;
+  letter-spacing: 2px;
+  font-size: 16px;
+  margin-top: 5px;
 }
 
 .storyAndSub {
   display: flex;
   flex-direction: column;
+  margin-top: 40px;
 }
 
 .footerbar{
