--- a/public/stylesheets/story.css
+++ b/public/stylesheets/story.css
@@ -27,28 +27,36 @@
 
 .story-topic {
     display: flex;
-    justify-content: center;
-    margin-top: 10px;
+    margin-top: -55px;
 }
 
 .story-topic > * {
     font-family: "checkbookregular";
-    margin: inherit;
     font-size: 25px;
     letter-spacing: 4px;
-    margin-left: 20px;
-    margin-right: 20px;
 }
+
+.topicName {
+    margin-right: 30%;
+    color: white;
+    text-shadow:
+    0 0 0px #fff,
+    0 0 12px #fff;
+}
+
+.userAndDate {
+    display: flex;
+    gap: 40px;
+    justify-content: row;
+    margin-left: 60px;
+}
+
 
 
 .storyBodyDiv{
     text-align: left;
     padding-left: 15px;
-    background: linear-gradient(
-        to bottom,
-        rgba(18, 16, 16, 0) 50%,
-        rgba(0, 0, 0, 0.25) 50%
-    );
+    background-color:  rgba(0, 0, 0, 0.4);
     background-size: 20% 3px;
     z-index: 2;
     pointer-events: none;
@@ -61,7 +69,9 @@
 }
 
 .storyBody{
-    font-family: 'Courier New', Courier, monospace;
+    font-family: "C64 Pro";
+    color: lime;
+    text-shadow: 0 0 1px lime, 0 0 14px lime;
     font-size: 20px;
     letter-spacing: 2px;
     direction: ltr;
